Harden System Security v1.0.34.0
# What's New

## Harden System Security

* Updated the dependencies to the latest versions.

* Added a new security measure to the Miscellaneous Category: Configure the Antimalware Scan Interface (AMSI) to strictly enforce Authenticode code signing requirements for all third-party antimalware providers: https://learn.microsoft.com/windows/win32/api/amsi/nn-amsi-iantimalwareprovider#remarks

* In the Group Policy Editor page, the columns now dynamically resize when you perform search, improving the user experience.

* Minor performance improvements.

## AppControl Manager

* Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios.

--- a/Harden System Security/Strings/AR/SecurityMeasures.resw
+++ b/Harden System Security/Strings/AR/SecurityMeasures.resw
@@ -979,4 +979,7 @@
 <data name="DisplayPIFFileExtension-Miscellaneous" xml:space="preserve">
     <value>عرض ملحق الملف لملفات (.pif) في مستكشف الملفات. تعمل ملفات معلومات البرنامج (PIF) بشكل مشابه لملفات .exe وغالباً ما يستخدمها المهاجمون لإخفاء البرامج الضارة خلف نوع ملف أقل شيوعاً.</value>
 </data>
+<data name="AMSIFeatureBits-Miscellaneous" xml:space="preserve">
+    <value>قم بتكوين واجهة فحص مكافحة البرامج الضارة (AMSI) لفرض متطلبات توقيع التعليمات البرمجية لـ Authenticode بصرامة على جميع موفري برامج مكافحة البرامج الضارة التابعين لجهات خارجية.</value>
+</data>
 </root>
