--- a/Harden System Security/ReleaseNotes.txt
+++ b/Harden System Security/ReleaseNotes.txt
@@ -1,9 +1,9 @@
-* Removed a policy from the Optional Overrides category, named: "Disabled Configure password backup directory".
+🎁✨ Merry Christmas! 🎄❄️
 
-   * This is to increase compatibility with Windows Servers. This was the policy's description in the document: Microsoft Security Baselines set its value to "Active Directory", but since the Harden System Security app does not apply to computers managed by domain controllers or Entra ID, there is no need for this policy to be active.
- 
-* Added a new policy to the Optional Overrides category: Allow signing in through Remote Desktop Services. This will allow you to use Remote Desktop (RDP) locally to sign into your machine. For Device Usage intents, it only applies to Developer, Gaming and School intents. By default, all accounts can sign into the machine through Remote Desktop Services, but Microsoft Security Baselines set that policy to block for all kinds of accounts.
+* Updated the dependencies to the latest versions.
 
-* Fixed an issue in the Optional Windows Features category by adding the `DismService.exe` component of the Harden System Security app to Attack Surface Reduction rules exclusions, only for the duration of the app's runtime, which is automatically removed when you close the app. Please refer to my comment here for further explanation: https://github.com/HotCakeX/Harden-Windows-Security/issues/970#issuecomment-3664355080
+* Added a new security measure to the Miscellaneous Category: Configure the Antimalware Scan Interface (AMSI) to strictly enforce Authenticode code signing requirements for all third-party antimalware providers: https://learn.microsoft.com/windows/win32/api/amsi/nn-amsi-iantimalwareprovider#remarks
 
-* Added 3 new security measures to the Miscellaneous Category responsible for showing the extension of `.url`, `.pif` and `.lnk` files in File Explorer.
+* In the Group Policy Editor page, the columns now dynamically resize when you perform search, improving the user experience.
+
+* Minor performance improvements.
