--- a/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
+++ b/Harden System Security/Strings/ml-IN/SecurityMeasures.resw
@@ -979,4 +979,7 @@
 <data name="DisplayPIFFileExtension-Miscellaneous" xml:space="preserve">
     <value>ഫയൽ എക്സ്പ്ലോററിൽ (.pif) ഫയലുകൾക്കുള്ള ഫയൽ എക്സ്റ്റൻഷൻ പ്രദർശിപ്പിക്കുക. പ്രോഗ്രാം ഇൻഫർമേഷൻ ഫയലുകൾ (PIF) .exe ഫയലുകൾക്ക് സമാനമായി പ്രവർത്തിക്കുന്നു, കൂടാതെ കുറഞ്ഞ പരിചിതമായ ഫയൽ തരത്തിന് പിന്നിൽ മാൽവെയർ മറയ്ക്കാൻ ആക്രമണകാരികൾ ഇത് frequently ഉപയോഗിക്കുന്നു.</value>
 </data>
+<data name="AMSIFeatureBits-Miscellaneous" xml:space="preserve">
+    <value>എല്ലാ തേർഡ്-പാർട്ടി ആന്റിമാൽവെയർ സേവനദാതാക്കൾക്കും Authenticode കോഡ് സൈനിംഗ് ആവശ്യകതകൾ കർശനമായി നടപ്പിലാക്കുന്നതിനായി Antimalware Scan Interface (AMSI) ക്രമീകരിക്കുക.</value>
+</data>
 </root>
