--- a/AppControl Manager/ReleaseNotes.txt
+++ b/AppControl Manager/ReleaseNotes.txt
@@ -1,3 +1,3 @@
-# What's New
-
 * Improved the performance of network requests made by the app to prevent port/socket exhaustion during heavy usage scenarios.
+
+* The home page now has a new section that shows whether your Windows is activated and if so how. It shows detailed information about activation method being used, license status, expiration date (if applicable), and more.
